--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -63,7 +63,14 @@
         <label id="cameraLabel">
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
+            <button id="switchCameraButton">Changer de Caméra</button>
         </label>
+        <label>
+            Sélectionner un utilisateur :
+            <select id="userSelect"></select>
+        </label>
+      <button id="likeButton">❤️</button>
+        <p id="likesCount">Likes reçus: 0</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -71,7 +78,8 @@
         let localStream;
         let peer;
         let call;
-        let validPeers = {};  // Utilisé pour stocker les IDs de pairs valides
+        let validUsers = [];
+        let likedUsers = {};
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -83,7 +91,10 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
-        const cameraLabel = document.getElementById('cameraLabel');
+        const userSelect = document.getElementById('userSelect');
+        const switchCameraButton = document.getElementById('switchCameraButton');
+        const likeButton = document.getElementById('likeButton');
+        const likesCount = document.getElementById('likesCount');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -96,6 +107,8 @@
         if (storedId) {
             myIdInput.value = storedId;
             initializePeer(storedId);
+        } else {
+            generateMyIdButton.click();
         }
 
         function initializePeer(id) {
@@ -103,6 +116,7 @@
 
             peer.on('open', () => {
                 console.log('My peer ID is: ' + id);
+                addUserToValidUsers(id);
             });
 
             peer.on('call', (incomingCall) => {
@@ -120,18 +134,21 @@
                     });
             });
 
-            peer.on('connection', (conn) => {
-                conn.on('open', () => {
-                    console.log('Connection established with:', conn.peer);
-                    validPeers[conn.peer] = true;
-                    updatePeerList();
-                });
-
-                conn.on('close', () => {
-                    delete validPeers[conn.peer];
-                    updatePeerList();
+            peer.on('connection', conn => {
+                conn.on('data', data => {
+                    if (data.type === 'like') {
+                        const senderId = conn.peer;
+                        if (!likedUsers[senderId]) {
+                            likedUsers[senderId] = 1;
+                        } else {
+                            likedUsers[senderId]++;
+                        }
+                        updateLikesCount();
+                    }
                 });
             });
+
+            setInterval(checkValidUsers, 5000);
         }
 
         function generateRandomId() {
@@ -144,7 +161,7 @@
                 .then(stream => {
                     localStream = stream;
                     localVideo.srcObject = stream;
-                    applyMicMute(); // Applique le mute initial selon l'état du checkbox
+                    applyMicMute();
                     return stream;
                 })
                 .catch((err) => {
@@ -157,32 +174,44 @@
             const device = detectDevice();
             let constraints = {
                 audio: true,
-                video: true
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
             };
 
+            const devices = await navigator.mediaDevices.enumerateDevices();
+            const videoDevices = devices.filter(device => device.kind === 'videoinput');
+            cameraSelect.innerHTML = '';
+
             if (device === 'iOS') {
-                // Pour iOS, lister les caméras disponibles
-                const devices = await navigator.mediaDevices.enumerateDevices();
-                const videoDevices = devices.filter(device => device.kind === 'videoinput');
-                cameraSelect.innerHTML = '';
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else if (device === 'Android') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else {
                 videoDevices.forEach((device, index) => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
-                    option.text = device.label || `Caméra ${index + 1}`;
+                    option.text = `Caméra ${index + 1}`;
                     cameraSelect.appendChild(option);
                 });
-                const savedCameraId = localStorage.getItem('selectedCamera');
-                cameraSelect.value = savedCameraId || videoDevices[0].deviceId;
-                constraints.video = {
-                    deviceId: { exact: cameraSelect.value }
-                };
-                cameraLabel.style.display = 'block';
-            } else {
-                // Pour les autres appareils, utilisez la caméra arrière par défaut
-                constraints.video = {
-                    facingMode: 'environment'
-                };
-                cameraLabel.style.display = 'none';
+            }
+
+            // Restore the previously selected camera
+            const savedCameraId = localStorage.getItem('selectedCameraId');
+            if (savedCameraId) {
+                cameraSelect.value = savedCameraId;
             }
 
             return constraints;
@@ -232,7 +261,7 @@
                 .then((stream) => {
                     localStream = stream;
                     localVideo.srcObject = stream;
-                    applyMicMute(); // Applique le mute initial
+                    applyMicMute();
                     call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
                         remoteVideo.srcObject = remoteStream;
@@ -258,90 +287,75 @@
         });
 
         muteCheckbox.addEventListener('change', () => {
-            applyMicMute(); // Mute ou unmute le microphone localement
+            applyMicMute();
         });
 
         muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked); // Envoie le signal de mute au deuxième utilisateur
+            sendMuteSignal(muteRemoteCheckbox.checked);
+        });
+
+        switchCameraButton.addEventListener('click', async () => {
+            if (localStream) {
+                const videoTracks = localStream.getVideoTracks();
+                videoTracks.forEach(track => track.stop());
+            }
+            await getLocalStream();
         });
 
         cameraSelect.addEventListener('change', async () => {
-            localStorage.setItem('selectedCamera', cameraSelect.value); // Sauvegarder la sélection de la caméra
-            await getLocalStream(); // Reprendre le flux avec la nouvelle caméra sélectionnée
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+            if (localStream) {
+                const videoTracks = localStream.getVideoTracks();
+                videoTracks.forEach(track => track.stop());
+            }
+            await getLocalStream();
         });
 
-        function updatePeerList() {
-            const peerList = document.getElementById('peerList');
-            peerList.innerHTML = '';
-            Object.keys(validPeers).forEach(id => {
-                const option = document.createElement('option');
-                option.value = id;
-                option.text = id;
-                peerList.appendChild(option);
-            });
-        }
-
-        async function checkPeers() {
-            // Vérifie tous les 5 secondes si les pairs sont toujours connectés
-            setInterval(() => {
-                Object.keys(validPeers).forEach(id => {
-                    const conn = peer.connections[id];
-                    if (conn && conn.length === 0) {
-                        delete validPeers[id];
-                        updatePeerList();
-                    }
-                });
-            }, 5000);
-        }
-
-        function initializePeer(id) {
-            peer = new Peer(id);
-
-            peer.on('open', () => {
-                console.log('My peer ID is: ' + id);
-                checkPeers(); // Vérifie les pairs dès l'ouverture de la connexion
-            });
-
-            peer.on('call', (incomingCall) => {
-                getLocalStream()
-                    .then((stream) => {
-                        localStream = stream;
-                        localVideo.srcObject = stream;
-                        incomingCall.answer(stream);
-                        incomingCall.on('stream', (remoteStream) => {
-                            remoteVideo.srcObject = remoteStream;
-                        });
-                    })
-                    .catch((err) => {
-                        console.error('Failed to get local stream', err);
-                    });
-            });
-
-            peer.on('connection', (conn) => {
+        likeButton.addEventListener('click', () => {
+            if (call) {
+                const conn = peer.connect(call.peer);
                 conn.on('open', () => {
-                    console.log('Connection established with:', conn.peer);
-                    validPeers[conn.peer] = true;
-                    updatePeerList();
+                    conn.send({ type: 'like' });
                 });
+            }
+        });
 
-                conn.on('close', () => {
-                    delete validPeers[conn.peer];
-                    updatePeerList();
-                });
+        function addUserToValidUsers(userId) {
+            if (!validUsers.includes(userId)) {
+                validUsers.push(userId);
+                updateValidUsersComboBox();
+            }
+        }
+
+        function updateValidUsersComboBox() {
+            userSelect.innerHTML = '';
+            validUsers.forEach(user => {
+                const option = document.createElement('option');
+                option.value = user;
+                option.text = user;
+                userSelect.appendChild(option);
             });
         }
 
-        // Initialisation
-        (async function init() {
-            const storedId = localStorage.getItem('chatUsername');
-            if (storedId) {
-                myIdInput.value = storedId;
-                initializePeer(storedId);
-            } else {
-                generateMyIdButton.click();
-            }
-        })();
+        function checkValidUsers() {
+            const newValidUsers = [];
 
+            validUsers.forEach(userId => {
+                if (peer.connections[userId]) {
+                    newValidUsers.push(userId);
+                }
+            });
+
+            validUsers = newValidUsers;
+            updateValidUsersComboBox();
+        }
+
+        function updateLikesCount() {
+            const totalLikes = Object.values(likedUsers).reduce((acc, count) => acc + count, 0);
+            likesCount.textContent = `Likes reçus: ${totalLikes}`;
+        }
+
+        setInterval(checkValidUsers, 5000);
     </script>
 </body>
 </html>
