--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -63,8 +63,14 @@
         <label id="cameraLabel">
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
+            <button id="switchCameraButton">Changer de Caméra</button>
+        </label>
+        <label>
+            Sélectionner un utilisateur :
+            <select id="userSelect"></select>
         </label>
         <button id="likeButton">❤️</button>
+        <p id="likesCount">Likes reçus: 0</p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -72,6 +78,8 @@
         let localStream;
         let peer;
         let call;
+        let validUsers = [];
+        let likedUsers = {};
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
@@ -83,7 +91,10 @@
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
         const cameraSelect = document.getElementById('cameraSelect');
+        const userSelect = document.getElementById('userSelect');
+        const switchCameraButton = document.getElementById('switchCameraButton');
         const likeButton = document.getElementById('likeButton');
+        const likesCount = document.getElementById('likesCount');
 
         generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
@@ -105,6 +116,7 @@
 
             peer.on('open', () => {
                 console.log('My peer ID is: ' + id);
+                addUserToValidUsers(id);
             });
 
             peer.on('call', (incomingCall) => {
@@ -121,6 +133,22 @@
                         console.error('Failed to get local stream', err);
                     });
             });
+
+            peer.on('connection', conn => {
+                conn.on('data', data => {
+                    if (data.type === 'like') {
+                        const senderId = conn.peer;
+                        if (!likedUsers[senderId]) {
+                            likedUsers[senderId] = 1;
+                        } else {
+                            likedUsers[senderId]++;
+                        }
+                        updateLikesCount();
+                    }
+                });
+            });
+
+            setInterval(checkValidUsers, 5000);
         }
 
         function generateRandomId() {
@@ -180,6 +208,7 @@
                 });
             }
 
+            // Restore the previously selected camera
             const savedCameraId = localStorage.getItem('selectedCameraId');
             if (savedCameraId) {
                 cameraSelect.value = savedCameraId;
@@ -234,27 +263,32 @@
                     localVideo.srcObject = stream;
                     applyMicMute();
                     call = peer.call(peerId, stream);
+
                     call.on('stream', (remoteStream) => {
                         remoteVideo.srcObject = remoteStream;
                     });
+
                     call.on('close', () => {
                         remoteVideo.srcObject = null;
                     });
+
+                    call.on('error', (err) => {
+                        console.error('Call error:', err);
+                    });
+
+                    updateValidUsers(peerId);
                 })
                 .catch((err) => {
-                    console.error('Failed to get local stream', err);
+                    console.error('Failed to get local stream:', err);
                 });
         });
 
         hangupButton.addEventListener('click', () => {
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
-            }
             if (call) {
                 call.close();
+                remoteVideo.srcObject = null;
+                call = null;
             }
-            localVideo.srcObject = null;
-            remoteVideo.srcObject = null;
         });
 
         muteCheckbox.addEventListener('change', () => {
@@ -265,22 +299,73 @@
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
-        cameraSelect.addEventListener('change', async () => {
-            if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => track.stop());
+        switchCameraButton.addEventListener('click', async () => {
+            const constraints = await detectCameraConstraints();
+            const currentStream = localVideo.srcObject;
+            if (currentStream) {
+                const videoTrack = currentStream.getVideoTracks()[0];
+                videoTrack.stop();
             }
-            await getLocalStream();
-        });
-
-        cameraSelect.addEventListener('change', () => {
+            localStream = await navigator.mediaDevices.getUserMedia(constraints);
+            localVideo.srcObject = localStream;
             localStorage.setItem('selectedCameraId', cameraSelect.value);
         });
 
         likeButton.addEventListener('click', () => {
-            const likes = JSON.parse(localStorage.getItem('likes') || '[]');
-            likes.push({ id: peerIdInput.value, timestamp: new Date().toISOString() });
-            localStorage.setItem('likes', JSON.stringify(likes));
+            const conn = peer.connections[peerIdInput.value];
+            if (conn) {
+                conn.send({ type: 'like' });
+                if (!likedUsers[myIdInput.value]) {
+                    likedUsers[myIdInput.value] = 0;
+                }
+                likedUsers[myIdInput.value]++;
+                updateLikesCount();
+            }
+        });
+
+        function updateLikesCount() {
+            const totalLikes = Object.values(likedUsers).reduce((sum, likes) => sum + likes, 0);
+            likesCount.textContent = `Likes reçus: ${totalLikes}`;
+            localStorage.setItem('likes', JSON.stringify(likedUsers));
+        }
+
+        function updateValidUsers(peerId) {
+            validUsers.push(peerId);
+            const option = document.createElement('option');
+            option.value = peerId;
+            option.textContent = peerId;
+            userSelect.appendChild(option);
+        }
+
+        function checkValidUsers() {
+            validUsers.forEach(userId => {
+                if (!peer.connections[userId]) {
+                    userSelect.querySelector(`option[value="${userId}"]`).remove();
+                    validUsers = validUsers.filter(id => id !== userId);
+                }
+            });
+        }
+
+        function updateLikesCount() {
+            const savedLikes = JSON.parse(localStorage.getItem('likes')) || {};
+            const totalLikes = Object.values(savedLikes).reduce((sum, likes) => sum + likes, 0);
+            likesCount.textContent = `Likes reçus: ${totalLikes}`;
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const savedLikes = JSON.parse(localStorage.getItem('likes')) || {};
+            likedUsers = savedLikes;
+            updateLikesCount();
+        });
+
+        navigator.mediaDevices.enumerateDevices().then(devices => {
+            const videoDevices = devices.filter(device => device.kind === 'videoinput');
+            videoDevices.forEach((device, index) => {
+                const option = document.createElement('option');
+                option.value = device.deviceId;
+                option.text = `Caméra ${index + 1}`;
+                cameraSelect.appendChild(option);
+            });
         });
     </script>
 </body>
