--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -23,7 +23,7 @@
             margin-bottom: 20px;
         }
         video {
-            max-width: 300px;
+          max-width: 300px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -78,8 +78,8 @@
         <label>
             <input type="checkbox" id="muteRemoteCheckbox"> Mute Le Micro du Deuxième Utilisateur
         </label>
-        <label>
-            Caméra :
+        <label id="cameraLabel">
+            Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
     </div>
@@ -93,16 +93,16 @@
         let unlikedUsers = {};
         let lastCallerId = '';
         let peerConnections = {};
-        let cameraSelect = document.getElementById('cameraSelect');
-        let localVideo = document.getElementById('localVideo');
 
         const callButton = document.getElementById('callButton');
         const hangupButton = document.getElementById('hangupButton');
         const generateMyIdButton = document.getElementById('generateMyId');
         const myIdInput = document.getElementById('myId');
         const peerIdInput = document.getElementById('peerId');
+        const localVideo = document.getElementById('localVideo');
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
+        const cameraSelect = document.getElementById('cameraSelect');
         const videoContainer = document.getElementById('video-container');
 
         generateMyIdButton.addEventListener('click', () => {
@@ -156,13 +156,6 @@
                         updateLikesCount(senderId);
                     } else if (data.type === 'unlike') {
                         const senderId = conn.peer;
-                        if (!unlikedUsers[senderId]) {
-                            unlikedUsers[senderId] = 1;
-                        } else {
-                            unlikedUsers[senderId]++;
-                        }
-                        updateUnlikesCount(senderId);
-                        // Exclusion logic
                         localStorage.setItem('excludedUser', senderId);
                         setTimeout(() => {
                             if (localStorage.getItem('excludedUser') === senderId) {
@@ -170,12 +163,15 @@
                                 throw new Error("L'utilisateur est exclu");
                             }
                         }, 5000);
+                        if (!unlikedUsers[senderId]) {
+                            unlikedUsers[senderId] = 1;
+                        } else {
+                            unlikedUsers[senderId]++;
+                        }
+                        updateUnlikesCount(senderId);
                     }
                 });
             });
-
-            // Update camera options
-            updateCameraOptions();
         }
 
         function generateRandomId() {
@@ -183,10 +179,7 @@
         }
 
         async function getLocalStream() {
-            const constraints = {
-                audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-            };
+            const constraints = await updateCameraSelect();
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
@@ -198,6 +191,67 @@
                     console.error('Failed to get local stream', err);
                     throw err;
                 });
+        }
+
+        async function updateCameraSelect() {
+            const device = detectDevice();
+            let constraints = {
+                audio: true,
+                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+            };
+
+            const devices = await navigator.mediaDevices.enumerateDevices();
+            const videoDevices = devices.filter(device => device.kind === 'videoinput');
+            cameraSelect.innerHTML = '';
+
+            if (device === 'iOS') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else if (device === 'Android') {
+                if (videoDevices.length > 1) {
+                    cameraSelect.innerHTML = `
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
+                    `;
+                } else {
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
+                }
+            } else {
+                videoDevices.forEach((device, index) => {
+                    const option = document.createElement('option');
+                    option.value = device.deviceId;
+                    option.text = `Caméra ${index + 1}`;
+                    cameraSelect.appendChild(option);
+                });
+            }
+
+            // Restore the previously selected camera
+            const savedCameraId = localStorage.getItem('selectedCameraId');
+            if (savedCameraId) {
+                cameraSelect.value = savedCameraId;
+            }
+
+            return constraints;
+        }
+
+        function detectDevice() {
+            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+            if (/windows phone/i.test(userAgent)) {
+                return "Windows Phone";
+            }
+            if (/android/i.test(userAgent)) {
+                return "Android";
+            }
+            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
+                return "iOS";
+            }
+            return "unknown";
         }
 
         function applyMicMute() {
@@ -219,40 +273,97 @@
             }
         }
 
-        callButton.addEventListener('click', () => {
-            const peerId = peerIdInput.value.trim();
-            if (!peerId) {
-                alert('Veuillez entrer l\'ID de la personne à appeler.');
-                return;
-            }
+        function addRemoteVideo(peerId, stream) {
+            let videoWrapper = document.getElementById(peerId);
+            if (!videoWrapper) {
+                videoWrapper = document.createElement('div');
+                videoWrapper.id = peerId;
+                videoWrapper.classList.add('video-wrapper');
+                videoContainer.appendChild(videoWrapper);
 
-            getLocalStream()
-                .then((stream) => {
-                    localStream = stream;
-                    localVideo.srcObject = stream;
-                    applyMicMute();
-                    call = peer.call(peerId, stream);
-                    call.on('stream', (remoteStream) => {
-                        addRemoteVideo(peerId, remoteStream);
-                    });
-                    call.on('close', () => {
-                        removeRemoteVideo(peerId);
-                    });
-                })
-                .catch((err) => {
-                    console.error('Failed to get local stream', err);
+                const video = document.createElement('video');
+                video.autoplay = true;
+                video.playsInline = true;
+                video.srcObject = stream;
+                videoWrapper.appendChild(video);
+
+                const controls = document.createElement('div');
+                controls.classList.add('controls');
+                videoWrapper.appendChild(controls);
+
+                const likeButton = document.createElement('button');
+                likeButton.textContent = '❤️';
+                likeButton.classList.add('like-button');
+                controls.appendChild(likeButton);
+
+                const unlikeButton = document.createElement('button');
+                unlikeButton.textContent = '⚡';
+                unlikeButton.classList.add('unlike-button');
+                unlikeButton.style.display = 'none';
+                controls.appendChild(unlikeButton);
+
+                const likeCount = document.createElement('p');
+                likeCount.classList.add('likes-count');
+                likeCount.textContent = 'Likes reçus: 0';
+                controls.appendChild(likeCount);
+
+                const unlikeCount = document.createElement('p');
+                unlikeCount.classList.add('unlikes-count');
+                unlikeCount.textContent = 'Unlikes reçus: 0';
+                controls.appendChild(unlikeCount);
+
+                likeButton.addEventListener('click', () => {
+                    const conn = peerConnections[peerId];
+                    if (conn) {
+                        conn.send({ type: 'like' });
+                    }
                 });
+
+                unlikeButton.addEventListener('click', () => {
+                    const conn = peerConnections[peerId];
+                    if (conn) {
+                        conn.send({ type: 'unlike' });
+                    }
+                });
+            } else {
+                videoWrapper.querySelector('video').srcObject = stream;
+            }
+        }
+
+        function updateLikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId);
+            if (videoWrapper) {
+                const likeCount = videoWrapper.querySelector('.likes-count');
+                likeCount.textContent = 'Likes reçus: ' + (likedUsers[peerId] || 0);
+            }
+        }
+
+        function updateUnlikesCount(peerId) {
+            const videoWrapper = document.getElementById(peerId);
+            if (videoWrapper) {
+                const unlikeCount = videoWrapper.querySelector('.unlikes-count');
+                unlikeCount.textContent = 'Unlikes reçus: ' + (unlikedUsers[peerId] || 0);
+            }
+        }
+
+        callButton.addEventListener('click', () => {
+            const peerId = peerIdInput.value;
+            if (peerId && localStream) {
+                const constraints = {
+                    audio: true,
+                    video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
+                };
+                peer.call(peerId, localStream, { constraints });
+                lastCallerId = peerId;
+                localStorage.setItem('lastCallerId', lastCallerId);
+                peerConnections[peerId] = peer.connect(peerId);
+            }
         });
 
         hangupButton.addEventListener('click', () => {
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
-            }
             if (call) {
                 call.close();
             }
-            localVideo.srcObject = null;
-            videoContainer.querySelectorAll('.video-wrapper').forEach(wrapper => wrapper.remove());
         });
 
         muteCheckbox.addEventListener('change', () => {
@@ -260,122 +371,25 @@
         });
 
         muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked);
+            if (call) {
+                sendMuteSignal(muteRemoteCheckbox.checked);
+            }
         });
 
-        function updateCameraOptions() {
-            navigator.mediaDevices.enumerateDevices()
-                .then(devices => {
-                    cameraSelect.innerHTML = '';
-                    devices.filter(device => device.kind === 'videoinput').forEach(device => {
-                        const option = document.createElement('option');
-                        option.value = device.deviceId;
-                        option.text = device.label || `Camera ${cameraSelect.length + 1}`;
-                        cameraSelect.appendChild(option);
-                    });
-                    if (cameraSelect.options.length > 0) {
-                        cameraSelect.selectedIndex = 0;
-                    }
-                })
-                .catch(error => {
-                    console.error('Error listing devices:', error);
-                });
-        }
+        cameraSelect.addEventListener('change', () => {
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
+            getLocalStream();
+        });
 
-        function addRemoteVideo(peerId, stream) {
-            if (!document.getElementById(peerId)) {
-                const wrapper = document.createElement('div');
-                wrapper.classList.add('video-wrapper');
-                wrapper.id = peerId;
-
-                const video = document.createElement('video');
-                video.autoplay = true;
-                video.playsInline = true;
-                video.srcObject = stream;
-
-                const controls = document.createElement('div');
-                controls.classList.add('controls');
-
-                const likeButton = document.createElement('button');
-                likeButton.innerText = '❤️';
-                likeButton.addEventListener('click', () => {
-                    sendLike(peerId);
-                });
-
-                const unlikeButton = document.createElement('button');
-                unlikeButton.innerText = '⚡';
-                unlikeButton.style.display = 'none';
-                unlikeButton.addEventListener('click', () => {
-                    sendUnlike(peerId);
-                });
-
-                const likesCount = document.createElement('p');
-                likesCount.classList.add('likes-count');
-                likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
-
-                const unlikesCount = document.createElement('p');
-                unlikesCount.classList.add('unlikes-count');
-                unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-                unlikesCount.style.display = 'none';
-
-                controls.appendChild(likeButton);
-                controls.appendChild(unlikeButton);
-                controls.appendChild(likesCount);
-                controls.appendChild(unlikesCount);
-
-                wrapper.appendChild(video);
-                wrapper.appendChild(controls);
-                videoContainer.appendChild(wrapper);
-
-                peerConnections[peerId] = { video, controls, likeButton, unlikeButton, likesCount, unlikesCount };
+        // Check for previous settings
+        window.addEventListener('load', () => {
+            const lastCallerId = localStorage.getItem('lastCallerId');
+            if (lastCallerId) {
+                peerIdInput.value = lastCallerId;
+                callButton.click();
             }
-        }
+        });
 
-        function removeRemoteVideo(peerId) {
-            const videoWrapper = document.getElementById(peerId);
-            if (videoWrapper) {
-                videoWrapper.remove();
-                delete peerConnections[peerId];
-            }
-        }
-
-        function sendLike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'like' });
-                likedUsers[peerId] = (likedUsers[peerId] || 0) + 1;
-                updateLikesCount(peerId);
-            });
-        }
-
-        function sendUnlike(peerId) {
-            const conn = peer.connect(peerId);
-            conn.on('open', () => {
-                conn.send({ type: 'unlike' });
-                unlikedUsers[peerId] = (unlikedUsers[peerId] || 0) + 1;
-                updateUnlikesCount(peerId);
-                localStorage.setItem('excludedUser', peerId);
-                setTimeout(() => {
-                    if (localStorage.getItem('excludedUser') === peerId) {
-                        document.body.innerHTML = '<a href="about:blank">Vous avez été exclu</a>';
-                        throw new Error("L'utilisateur est exclu");
-                    }
-                }, 5000);
-            });
-        }
-
-        function updateLikesCount(peerId) {
-            if (peerConnections[peerId]) {
-                peerConnections[peerId].likesCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
-            }
-        }
-
-        function updateUnlikesCount(peerId) {
-            if (peerConnections[peerId]) {
-                peerConnections[peerId].unlikesCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-                peerConnections[peerId].unlikeButton.style.display = 'block';
-            }
-        }
     </script>
 </body>
 </html>
